--- a/css/computer.css
+++ b/css/computer.css
@@ -86,6 +86,72 @@ div.left{
     transform: rotatey(-90deg) translatez(55px);
     background-color:#282828;
 }
+div.task{
+    background-color:#fff;
+}
+.task>article>h1{
+    margin: 20px 0 0 0;
+    padding: 0;
+    font-size: 9px;
+}
+.task>article>p{
+    margin: 0;
+    padding: 0 10px;
+    font-size: 5px;
+}
+.bug{
+    width:2.25vw;
+    height:2.5vw;
+    position:relative;
+    border-radius:100%;
+    background-color: #00A388;
+    left: 3.5vw;
+    top: -1.5vw;
+}
+
+.bug:before{
+    content:'';
+    height: 1.5vw;
+    width: 1.5vw;
+    position:absolute;
+    top:-.5vw;
+    left:.375vw;
+    background:#00A388;
+    border-radius:100%;
+}
+
+.bug:after{
+    content:'';
+    position:absolute;
+    left:-.75vw;
+    right:-.75vw;
+    height:1.5vw;
+    background:
+            top left / 100% 100% linear-gradient(
+                    transparent,
+                    transparent 45%,
+                    #00A388 45%,
+                    #00A388 55%,
+                    transparent 55%
+            ),
+            top left / 100% 100% linear-gradient(
+                    to bottom right,
+                    transparent,
+                    transparent 45%,
+                    #00A388 45%,
+                    #00A388 55%,
+                    transparent 55%
+            ),
+            top left / 100% 100% linear-gradient(
+                    to bottom left,
+                    transparent,
+                    transparent 45%,
+                    #00A388 45%,
+                    #00A388 55%,
+                    transparent 55%
+            );
+}
+
 div.left1{
     width:130px;
     height:110px;
@@ -108,12 +174,21 @@ div.progressbar{
 }
 div.progressbar:after{
     content:"";
-    width:60%;
+    width:0;
     height:100%;
     background-color:#4EC456;
     position:absolute;
     top:0;
     left:0;
+    animation: 5s progressbar linear infinite;
+}
+@keyframes progressbar {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 100%;
+    }
 }
 div.back1{
     width:15px;
